# bilocal-distillation

./: .gitignore  README.md  pyproject.toml
src/: generate_app_figure.py  generate_concat_small_figure.py  generate_evolution_small_figure.py  generate_phase_figure.py
src/figs/drawio/: concat-schematic.drawio  concat.drawio  concat.pdf_tex  schematic.drawio  schematic.pdf_tex
